--- a/_talks/2014-03-01-talk-3.md
+++ b/_talks/2014-03-01-talk-3.md
@@ -1,13 +1,13 @@
 ---
-title: ""Donghua & Diwei" 2017 Shanghai Fashion Week Knitwear Special Show "
+title: "Conference Proceeding talk 3 on Relevant Topic in Your Field"
 collection: talks
-type: "Fashion show Collaborative Project"
+type: "Conference proceedings talk"
 permalink: /talks/2014-03-01-talk-3
-venue: "Shanghai Fashion week(2017AW)"
-date: 2017-04-12
-location: "Shanghai"
+venue: "Testing Institute of America 2014 Annual Conference"
+date: 2014-03-01
+location: "Los Angeles, CA"
 ---
 
-As the main person in charge of connecting Donghua students at Tivi Fashion Company, I assisted more than 50 students in completing the presentation and production of over 80 sets of knitwear show pieces. The main tasks included yarn selection, pattern design, process improvement, and schedule arrangement.
+This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.
 ![Editing a markdown file for a talk](/images/2017xiuchang.png)
 ![Editing a markdown file for a talk](/images/2017hezhao.jpg)
