--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -56,11 +56,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\r\n",
-      "Talk 1 on Relevant Topic in Your Field\tTalk\ttalk-1\tUC San Francisco, Department of Testing\t2012-03-01\tSan Francisco, California\t\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Tutorial 1 on Relevant Topic in Your Field\tTutorial\ttutorial-1\tUC-Berkeley Institute for Testing Science\t2013-03-01\tBerkeley CA, USA\thttp://exampleurl.com\tThis is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Talk 2 on Relevant Topic in Your Field\tTalk\ttalk-2\tLondon School of Testing\t2014-02-01\tLondon, UK\thttp://example2.com\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Conference Proceeding talk 3 on Relevant Topic in Your Field\tConference proceedings talk\ttalk-3\tTesting Institute of America 2014 Annual Conference\t2014-03-01\tLos Angeles, CA\t\tThis is a description of your conference proceedings talk, note the different field in type. You can put anything in this field."
+      "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\n",
+      "Talk 1 on Relevant Topic in Your Field\tTalk\ttalk-1\tUC San Francisco, Department of Testing\t2012-03-01\tSan Francisco, California\t\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
+      "Tutorial 1 on Relevant Topic in Your Field\tTutorial\ttutorial-1\tUC-Berkeley Institute for Testing Science\t2013-03-01\tBerkeley CA, USA\thttp://exampleurl.com\tThis is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
+      "Talk 2 on Relevant Topic in Your Field\tTalk\ttalk-2\tLondon School of Testing\t2014-02-01\tLondon, UK\thttp://example2.com\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
+      "\"Donghua Diwei\" 2017 Shanghai Fashion Week Knitwear Special Show Release\tFashion show Collaborative Project\ttalk-3\t2017AW Shanghai Fashion Week\t2017-04-12\t Shanghai\thttp://example2.com\tAs the main person in charge of connecting Donghua students at Tivi Fashion Company, I assisted more than 50 students in completing the presentation and production of over 80 sets of knitwear show pieces. The main tasks included yarn selection, pattern design, process improvement, and schedule arrangement."
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -92,6 +92,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -142,14 +155,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Conference Proceeding talk 3 on Relevant Topic...</td>\n",
-       "      <td>Conference proceedings talk</td>\n",
+       "      <td>Donghua Diwei 2017 Shanghai Fashion Week Knitw...</td>\n",
+       "      <td>Fashion show Collaborative Project</td>\n",
        "      <td>talk-3</td>\n",
-       "      <td>Testing Institute of America 2014 Annual Confe...</td>\n",
-       "      <td>2014-03-01</td>\n",
-       "      <td>Los Angeles, CA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>This is a description of your conference proce...</td>\n",
+       "      <td>2017AW Shanghai Fashion Week</td>\n",
+       "      <td>2017-04-12</td>\n",
+       "      <td>Shanghai</td>\n",
+       "      <td>http://example2.com</td>\n",
+       "      <td>As the main person in charge of connecting Don...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -160,34 +173,34 @@
        "0             Talk 1 on Relevant Topic in Your Field   \n",
        "1         Tutorial 1 on Relevant Topic in Your Field   \n",
        "2             Talk 2 on Relevant Topic in Your Field   \n",
-       "3  Conference Proceeding talk 3 on Relevant Topic...   \n",
+       "3  Donghua Diwei 2017 Shanghai Fashion Week Knitw...   \n",
        "\n",
-       "                          type    url_slug  \\\n",
-       "0                         Talk      talk-1   \n",
-       "1                     Tutorial  tutorial-1   \n",
-       "2                         Talk      talk-2   \n",
-       "3  Conference proceedings talk      talk-3   \n",
+       "                                 type    url_slug  \\\n",
+       "0                                Talk      talk-1   \n",
+       "1                            Tutorial  tutorial-1   \n",
+       "2                                Talk      talk-2   \n",
+       "3  Fashion show Collaborative Project      talk-3   \n",
        "\n",
-       "                                               venue        date  \\\n",
-       "0            UC San Francisco, Department of Testing  2012-03-01   \n",
-       "1          UC-Berkeley Institute for Testing Science  2013-03-01   \n",
-       "2                           London School of Testing  2014-02-01   \n",
-       "3  Testing Institute of America 2014 Annual Confe...  2014-03-01   \n",
+       "                                       venue        date  \\\n",
+       "0    UC San Francisco, Department of Testing  2012-03-01   \n",
+       "1  UC-Berkeley Institute for Testing Science  2013-03-01   \n",
+       "2                   London School of Testing  2014-02-01   \n",
+       "3               2017AW Shanghai Fashion Week  2017-04-12   \n",
        "\n",
        "                    location               talk_url  \\\n",
        "0  San Francisco, California                    NaN   \n",
        "1           Berkeley CA, USA  http://exampleurl.com   \n",
        "2                 London, UK    http://example2.com   \n",
-       "3            Los Angeles, CA                    NaN   \n",
+       "3                   Shanghai    http://example2.com   \n",
        "\n",
        "                                         description  \n",
        "0  This is a description of your talk, which is a...  \n",
        "1  This is a description of your tutorial, note t...  \n",
        "2  This is a description of your talk, which is a...  \n",
-       "3  This is a description of your conference proce...  "
+       "3  As the main person in charge of connecting Don...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -240,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -302,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -313,8 +326,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2012-03-01-talk-1.md\t  2014-02-01-talk-2.md\r\n",
-      "2013-03-01-tutorial-1.md  2014-03-01-talk-3.md\r\n"
+      "2012-03-01-talk-1.md     2014-02-01-talk-2.md     2017-04-12-talk-3.md\n",
+      "2013-03-01-tutorial-1.md 2014-03-01-talk-3.md\n"
      ]
     }
    ],
@@ -324,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -335,24 +348,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---\r\n",
-      "title: \"Tutorial 1 on Relevant Topic in Your Field\"\r\n",
-      "collection: talks\r\n",
-      "type: \"Tutorial\"\r\n",
-      "permalink: /talks/2013-03-01-tutorial-1\r\n",
-      "venue: \"UC-Berkeley Institute for Testing Science\"\r\n",
-      "date: 2013-03-01\r\n",
-      "location: \"Berkeley CA, USA\"\r\n",
-      "---\r\n",
-      "\r\n",
-      "[More information here](http://exampleurl.com)\r\n",
-      "\r\n",
-      "This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n"
+      "---\n",
+      "title: \"Donghua Diwei 2017 Shanghai Fashion Week Knitwear Special Show Release\"\n",
+      "collection: talks\n",
+      "type: \"Fashion show Collaborative Project\"\n",
+      "permalink: /talks/2017-04-12-talk-3\n",
+      "venue: \"2017AW Shanghai Fashion Week\"\n",
+      "date: 2017-04-12\n",
+      "location: \" Shanghai\"\n",
+      "---\n",
+      "\n",
+      "[More information here](http://example2.com)\n",
+      "\n",
+      "As the main person in charge of connecting Donghua students at Tivi Fashion Company, I assisted more than 50 students in completing the presentation and production of over 80 sets of knitwear show pieces. The main tasks included yarn selection, pattern design, process improvement, and schedule arrangement.\n"
      ]
     }
    ],
    "source": [
-    "!cat ../_talks/2013-03-01-tutorial-1.md"
+    "!cat ../_talks/2017-04-12-talk-3.md"
    ]
   }
  ],
@@ -372,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
